--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,20 @@
 /* Box Model Hack */
 * {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
-/* Clear fix hack */
-.clearfix:after {
-     content: ".";
-     display: block;
-     clear: both;
-     visibility: hidden;
-     line-height: 0;
-     height: 0;
+#canvas1 {
+  border: 5px black solid;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  max-width: 100%;
+  max-height: 100%;
 }
 
-.clear {
-	clear: both;
+#player {
+  display: none;
 }
-
-/******************************************
-/* BASE STYLES
-/*******************************************/
